--- a/src/style/member/voteAnswer.css
+++ b/src/style/member/voteAnswer.css
@@ -19,8 +19,8 @@
 
 
 
-#voteAnswer {
-    position: relative;
+#voteMemberAnswer {
+    /* position: relative; */
     width: 90%;
     height: 100px;
     padding: 0px 10px;
@@ -77,14 +77,14 @@
 }
 
 
-#voteAnswerWords {
+#voteMemberAnswerWords {
     color: black;
     display: flex;
     vertical-align: middle;
     font-size: 24px;
 }
 
-#voteAnswer.highlight {
+#voteMemberAnswer.highlight {
     border: 2px solid black;
 }
 
@@ -117,11 +117,12 @@
 
 @media only screen and (max-width: 660px) {
     #answerPoll {
+        /* display: grid; */
         width: 80%;
         margin-left: 10%;
-        padding: 15px;
         margin-top: 5px;
-        height: 100%;
+        height: 500px;
+        margin-bottom: 100px;
         /* background-color: red; */
     }
 
@@ -130,7 +131,7 @@
 
     }
 
-    #voteAnswer {
+    #voteMemberAnswer {
         font-size: 24px;
         padding: 15px;
         height: 70px;
@@ -144,7 +145,8 @@
         margin-left: 10%;
         padding: 15px;
         margin-top: 5px;
-        height: 90%;
+        margin-bottom: 100px;
+        /* height: 90%; */
         /* background-color: red; */
     }
 
@@ -153,7 +155,7 @@
 
     }
 
-    #voteAnswer {
+    #voteMemberAnswer {
         font-size: 24px;
         padding: 15px;
         height: 70px;
