--- a/src/component/fordummies/rentway/rentway.css
+++ b/src/component/fordummies/rentway/rentway.css
@@ -1,6 +1,9 @@
 
 .Rentway{
+    margin: auto;
     margin-bottom: 10rem;
+    padding: 0 2rem;
+    width: 80%;
 }
 
 
@@ -18,7 +21,7 @@
 .brand-btn{
     width: 80%;
     max-width: 30rem;
-    height: 20rem;
+    height: 22rem;
     padding: 20px;
 }
 
@@ -106,9 +109,9 @@ button {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 90%;
-  max-width: 80rem;
-  z-index: 10;
+  width: 50%;
+  max-width: 70rem;
+  z-index: 200;
   background-color: #eee;
   border-radius: 4px;
   box-shadow: 0 1rem 1.5rem 3px rgba(0, 0, 0, 0.15);
