--- a/src/pages/News/style.css
+++ b/src/pages/News/style.css
@@ -13,9 +13,9 @@ h1{
     font-size: 2rem;
     color: var(--mainColor-green);
     font-weight: 500;
-    margin-top: 1rem;
+    margin-bottom: 3rem ;
     display: block;
-    padding:0 0 0 20px;
+
 }
 
 .blog-goBack span{
@@ -27,7 +27,7 @@ h1{
 }
 
 .blog-date{
-    font-size: .8rem;
+    font-size: 2rem;
     color: #a9a9a9;
     font-weight: 500;
 }
@@ -50,17 +50,21 @@ h1{
 .blog-desc{
     padding: 1rem;
     margin: 1rem 0 0 0;
-    line-height: 2rem;
+    line-height: 1.5;
+    font-size: 1.8rem;
+
 }
 
 .blog-subtitle{
     color: var(--mainColor-green);
     padding: 1rem;
+    font-size: 2.5rem;
 }
 
 .blog-cc{
     color: #999;
     margin-bottom: 8px;
+    font-size: 2rem;
 }
 
 .contentCover{
@@ -76,7 +80,7 @@ h1{
 
 .connection {
     color: #64C676;
-    font-size: 2rem;
+    font-size: 50px;
     padding: 0;
     margin: 0;
 }
@@ -95,6 +99,7 @@ h1{
     width: 150px;
     border-radius: 20px;
     color: #999;
+    font-size: 20px;
   }
 
   .form-btn .sendmessage{
